Disinherit base image labels
Change the INHERIT_BASE_IMAGE_LABELS param's default from true to false.

This may be experienced as a breaking change by some users, so this also
bump buildah task versions to 0.7.

Defaulting to inherit base image labels is not what we want.

For example, inheriting base image labels means that if you happen to
omit setting `name` or `cpe` labels, then your image will *appear* to be
ubi9 if you build on top of ubi9. The safer choice is to not inherit
labels from base images by default. Only inherit labels from base images
if the user explicitly sets it with a param.

This is particularly important for scanners that use labels (and
/root/buildinfo/labels.json) in order to identify images to look them up
in vulnerability databases.

Signed-off-by: Ralph Bean <rbean@redhat.com>

--- a/task/buildah-min/0.6/buildah-min.yaml
+++ b/task/buildah-min/0.6/buildah-min.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     app.kubernetes.io/version: "0.6"
     build.appstudio.redhat.com/build_type: docker
+    build.appstudio.redhat.com/expires-on: "2026-02-19T00:00:00Z"
   name: buildah-min
 spec:
   description: |-
