--- a/task/buildah-oci-ta/0.7/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.7/buildah-oci-ta.yaml
@@ -7,9 +7,8 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
-    app.kubernetes.io/version: "0.6"
+    app.kubernetes.io/version: "0.7"
     build.appstudio.redhat.com/build_type: docker
-    build.appstudio.redhat.com/expires-on: "2026-02-19T00:00:00Z"
 spec:
   description: |-
     Buildah task builds source code into a container image and pushes the image into container registry using buildah tool.
@@ -115,7 +114,7 @@ spec:
     - name: INHERIT_BASE_IMAGE_LABELS
       description: Determines if the image inherits the base image labels.
       type: string
-      default: "true"
+      default: "false"
     - name: LABELS
       description: Additional key=value labels that should be applied to the
         image
