--- a/task/buildah-remote-oci-ta/0.7/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.7/buildah-remote-oci-ta.yaml
@@ -6,9 +6,8 @@ metadata:
     tekton.dev/tags: image-build, konflux
   creationTimestamp: null
   labels:
-    app.kubernetes.io/version: "0.6"
+    app.kubernetes.io/version: "0.7"
     build.appstudio.redhat.com/build_type: docker
-    build.appstudio.redhat.com/expires-on: "2026-02-19T00:00:00Z"
   name: buildah-remote-oci-ta
 spec:
   description: |-
@@ -110,7 +109,7 @@ spec:
       respectively.
     name: IMAGE_EXPIRES_AFTER
     type: string
-  - default: "true"
+  - default: "false"
     description: Determines if the image inherits the base image labels.
     name: INHERIT_BASE_IMAGE_LABELS
     type: string
