--- a/task/buildah/0.6/buildah.yaml
+++ b/task/buildah/0.6/buildah.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/version: "0.6"
     build.appstudio.redhat.com/build_type: "docker"
+    build.appstudio.redhat.com/expires-on: "2026-02-19T00:00:00Z"
   annotations:
     tekton.dev/pipelines.minVersion: "0.12.1"
     tekton.dev/tags: "image-build, konflux"
